# ludumdare47

./: .gitignore  CNAME  Cargo.toml  README.md  axe.mtl  black_cloud.mtl  double_stick.mtl  example-config.json  gold_nugget.mtl  index.html  ludumdare47.js  ludumdare47_bg.wasm  pebble.mtl  planks.mtl  sharp_stone.mtl  stick.mtl  tree.mtl
.github/workflows/: ci.yml
player/: shirt.mtl  skin.mtl
snippets/geng-core-07e0ee00576cfe86/: inline1.js  inline2.js  inline3.js
snippets/geng-core-94c8564fb3134fdb/: inline1.js
src/: main.rs  server.rs
src/app/: client_entity.rs  client_view.rs  draw.rs  light.rs  mod.rs  tile_mesh.rs  traffic.rs
src/app/camera/: controls.rs  mod.rs
src/app/ez/: program.glsl
src/app/ez3d/: mod.rs  obj.rs  program.glsl
src/app/resource_pack/: mod.rs
src/model/: biome.rs  chunk.rs  chunked_world.rs  client_view.rs  collision.rs  components.rs  config.rs  effect.rs  entity.rs  generation.rs  generation_noise.rs  id.rs  item.rs  mod.rs  multi_noise.rs  pathfind.rs  player.rs  player_view.rs  recipe.rs  resource_pack.rs  rules.rs  spawn.rs  structure.rs  tick.rs  tile.rs  vision.rs  world_gen.rs
src/renderer/: mod.rs
src/renderer/camera/: controls.rs
src/renderer/ez/: mod.rs
src/util/: div.rs  iter.rs  loaded.rs  mod.rs  saved.rs
static/: axe.mtl  campfire.mtl  gold_nugget.mtl  index.html  log.mtl  pebble.mtl  player.mtl  raft.mtl  statue.mtl  stick.mtl  treasure_chest.mtl  tree.mtl
static/packs/magic/client/: biomes.json  entities.json
static/packs/magic/server/: biomes.json  items.json  (+6 more)
static/player/: eyes.mtl  pants.mtl
(+23 files in other folders)
