[package]
name = "island"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"

[dependencies]
geng = "0.7.0-alpha"
serde = "1"
noise = "0.6.0"
structopt = "0.3"

[dependencies.serde_with]
version = "1.5.1"
features = ["json"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3"